--- a/css/style.css
+++ b/css/style.css
@@ -1468,20 +1468,20 @@ ul {
           padding: 12px 6px; }
           .slide-container .swiper-slide .cart-donation img {
             height: 60px; } }
-    .slide-container .swiper-slide:not(.swiper-slide-active) .cart-donation {
-      filter: blur(1px);
-      cursor: pointer; }
-      .slide-container .swiper-slide:not(.swiper-slide-active) .cart-donation:hover {
-        filter: blur(0); }
     .slide-container .swiper-slide.swiper-slide-active {
       z-index: 1; }
       .slide-container .swiper-slide.swiper-slide-active .cart-donation {
-        filter: blur(0);
+        filter: blur(0) !important;
         transition: 1s;
         transform: scale3d(1.3, 1.3, 1); }
         @media (max-width: 575.98px) {
           .slide-container .swiper-slide.swiper-slide-active .cart-donation {
             transform: scale3d(1.5, 1.5, 1); } }
+    .slide-container .swiper-slide:not(.swiper-slide-active) .cart-donation {
+      filter: blur(1px);
+      cursor: pointer; }
+      .slide-container .swiper-slide:not(.swiper-slide-active) .cart-donation:hover {
+        filter: blur(0); }
 
 .swiper-pagination {
   bottom: 30px !important;
