--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1394,20 +1394,20 @@ ul
 				padding: 12px 6px 
 				img 
 					height: 60px
+		&.swiper-slide-active
+			z-index: 1
+			.cart-donation
+				filter: blur(0) !important
+				transition: 1s
+				transform: scale3d(1.3, 1.3, 1)
+				@media (max-width: 575.98px)
+					transform: scale3d(1.5, 1.5, 1)
 		&:not(.swiper-slide-active)
 			.cart-donation
 				filter: blur(1px)
 				cursor: pointer
 				&:hover
 					filter: blur(0)
-		&.swiper-slide-active
-			z-index: 1
-			.cart-donation
-				filter: blur(0)
-				transition: 1s
-				transform: scale3d(1.3, 1.3, 1)
-				@media (max-width: 575.98px)
-					transform: scale3d(1.5, 1.5, 1)
 
 .swiper-pagination
 	bottom: 30px !important
